<resources>
    <string name="app_name">Sell me</string>

    <string name="facebook_app_id">398112938195567</string>
    <string name="fb_login_protocol_scheme">fb398112938195567</string>
    
    <string name="google_client_id">417612654099–4macjv1pp5am3vlq425uss7kcd0oc2nl.apps.googleusercontent.com</string>
    <string name="google_client_secret">zd88lvvucrOikGOeakfCdt6q</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="or_login_with">or login with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="facebook">Facebook</string>
    <string name="google_account">Google Account</string>
    <string name="message">Message</string>
    <string name="already_have_account">Already have account?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="log_out">Log out</string>
    <string name="registration_error">Sorry something went wrong, please try again later</string>


    <string name="accessgalery">Access to your gallery is restricted. Please  check your settings and try again</string>
</resources>