<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registrationFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.RegistrationFragment">

    <ImageView
        android:id="@+id/logoRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/nameRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.3" />

    <EditText
        android:id="@+id/nameRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/emailRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoRegistration"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/emailRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/passwordRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameRegistration"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/passwordRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_your_password"
        android:padding="16dp"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/passwordConfirmRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailRegistration"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/passwordConfirmRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/confirm_your_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordRegistration"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/loginWithTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordConfirmRegistration"
        app:layout_constraintWidth_percent="0.8" />

    <LinearLayout
        android:id="@+id/linear1Registration"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/etBorderColorLogin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/loginWithTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/loginWithTV"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/loginWithTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:color/white"
        android:paddingHorizontal="12dp"
        android:text="@string/or_login_with"
        app:layout_constraintBottom_toTopOf="@id/linear3Registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpButton" />

    <LinearLayout
        android:id="@+id/linear3Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@id/linear4Registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginWithTV"
        app:layout_constraintWidth_percent="0.8">

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/login_with_bkg"
            android:contentDescription="@string/facebook"
            android:src="@drawable/ic_facebook" />

        <ImageButton
            android:id="@+id/google"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="12dp"
            android:background="@drawable/login_with_bkg"
            android:contentDescription="@string/google_account"
            android:src="@drawable/ic_google" />

        <ImageButton
            android:id="@+id/message"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/login_with_bkg"
            android:contentDescription="@string/message"
            android:src="@drawable/ic_sms" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>