<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logoLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@id/emailLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.3" />

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/til"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoLogin"
            app:layout_constraintWidth_percent="0.8" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLogin"
            app:layout_constraintWidth_percent="0.8"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/etBorderColorLogin">

            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/loginWithTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til"
            app:layout_constraintWidth_percent="0.8" />

        <LinearLayout
            android:id="@+id/linear1Login"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/etBorderColorLogin"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/loginWithTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/loginWithTV"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/loginWithTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@android:color/white"
            android:paddingHorizontal="12dp"
            android:text="@string/or_login_with"
            app:layout_constraintBottom_toTopOf="@id/linear3Login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton" />

        <LinearLayout
            android:id="@+id/linear3Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginWithTV"
            app:layout_constraintWidth_percent="0.8">

            <ImageButton
                android:id="@+id/facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/login_with_bkg"
                android:contentDescription="@string/google_account"
                android:src="@drawable/ic_facebook" />

            <ImageButton
                android:id="@+id/google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/login_with_bkg"
                android:contentDescription="@string/google_account"
                android:src="@drawable/ic_google" />

            <ImageButton
                android:id="@+id/message"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/login_with_bkg"
                android:contentDescription="@string/message"
                android:src="@drawable/ic_sms" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear4Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sign_up"
                android:textColor="@color/blue"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>